--- a/client/src/components/navbar/Navbar.scss
+++ b/client/src/components/navbar/Navbar.scss
@@ -72,7 +72,10 @@
     .navIcon {
       font-size: 7.5vw;
       color: rgb(100, 100, 100);
+      cursor: pointer;
     }
+
+    
   }
 
   .notifIcon {
